logs/dag_id=create_and_populate_taxigov_datawarehouse/run_id=manual__2022-08-28T23:24:56.482980+00:00/task_id=create_dim_dates_table/attempt=1.log
[2022-08-28 23:25:00,828] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_dates_table manual__2022-08-28T23:24:56.482980+00:00 [queued]>
[2022-08-28 23:25:00,844] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_dates_table manual__2022-08-28T23:24:56.482980+00:00 [queued]>
[2022-08-28 23:25:00,844] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:25:00,845] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-08-28 23:25:00,845] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-08-28 23:25:00,861] {taskinstance.py:1397} INFO - Executing <Task(PostgresOperator): create_dim_dates_table> on 2022-08-28 23:24:56.482980+00:00
[2022-08-28 23:25:00,865] {standard_task_runner.py:52} INFO - Started process 2773 to run task
[2022-08-28 23:25:00,867] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'create_and_populate_taxigov_datawarehouse', 'create_dim_dates_table', 'manual__2022-08-28T23:24:56.482980+00:00', '--job-id', '102', '--raw', '--subdir', 'DAGS_FOLDER/create_and_populate_taxigov_datawarehouse_dag.py', '--cfg-path', '/tmp/tmpdwzm_2c0', '--error-file', '/tmp/tmpbmtnpibc']
[2022-08-28 23:25:00,867] {standard_task_runner.py:80} INFO - Job 102: Subtask create_dim_dates_table
[2022-08-28 23:25:00,915] {task_command.py:371} INFO - Running <TaskInstance: create_and_populate_taxigov_datawarehouse.create_dim_dates_table manual__2022-08-28T23:24:56.482980+00:00 [running]> on host ddc8002727e0
[2022-08-28 23:25:00,976] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=create_and_populate_taxigov_datawarehouse
AIRFLOW_CTX_TASK_ID=create_dim_dates_table
AIRFLOW_CTX_EXECUTION_DATE=2022-08-28T23:24:56.482980+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-08-28T23:24:56.482980+00:00
[2022-08-28 23:25:00,987] {base.py:68} INFO - Using connection ID 'redshift_default' for task execution.
[2022-08-28 23:25:02,920] {dbapi.py:231} INFO - Running statement: 
    DROP TABLE IF EXISTS dim_dates;

    CREATE TABLE IF NOT EXISTS dim_dates (ts, date, month, year, day_of_week, is_weekend) AS 
        WITH
        distinct_timestamps AS (
            SELECT
                ARRAY(
                    data_abertura,
                    data_despacho,
                    data_local_embarque,
                    data_inicio,
                    data_final
                ) AS timestamp_array
            FROM
                raw__taxigov_corridas
        )
        
        SELECT
            DISTINCT
                ts,
                DATE(ts) AS date,
                EXTRACT(MONTH FROM ts) AS month,
                EXTRACT(YEAR FROM ts) AS year,
                EXTRACT(DOW FROM ts) AS day_of_week,
                CASE
                    WHEN EXTRACT(DOW FROM ts) IN (1, 7) THEN TRUE
                    ELSE FALSE 
                END AS is_weekend
        FROM
            distinct_timestamps,
            distinct_timestamps.timestamp_array AS ts;, parameters: None
[2022-08-28 23:25:03,319] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ","
LINE 4:     CREATE TABLE IF NOT EXISTS dim_dates (ts, date, month, y...
                                                    ^

[2022-08-28 23:25:03,327] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=create_and_populate_taxigov_datawarehouse, task_id=create_dim_dates_table, execution_date=20220828T232456, start_date=20220828T232500, end_date=20220828T232503
[2022-08-28 23:25:03,337] {standard_task_runner.py:97} ERROR - Failed to execute job 102 for task create_dim_dates_table (syntax error at or near ","
LINE 4:     CREATE TABLE IF NOT EXISTS dim_dates (ts, date, month, y...
                                                    ^
; 2773)
[2022-08-28 23:25:03,368] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-28 23:25:03,407] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
